# RustApplication

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/rustapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/rustapplication/: MainActivity.kt
app/src/main/java/com/example/rustapplication/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/rustapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust_lib/: Cargo.toml  build.rs
rust_lib/.cargo/: config.toml
rust_lib/src/: java_glue.rs  java_glue.rs.in  lib.rs
